--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 
         <div class="container-fluid">
             <%= render "common/navbar" %>
+              <%= render "common/flashes" %>s
             <%= yield %>
         </div>
 
