--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <div class="group">
+  <div class="event">
     <%= link_to("New event", new_event_path, class:"btn btn-primary pull-right") %>
     </div>
     <table class="table table-hover">
