--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,5 +2,18 @@
     <h2>New</h2>
 
     <hr>
-    <input type="text" data-provide='datepicker' >
+
+    <%= simple_form_for @event do |e| %>
+    <div class="form-group">
+     <%= e.input :start_time, input_html: { class: "form-control"} %>
+      <%= e.input :end_time, input_html: { class: "form-control"} %>
+      <%= e.input :summary, input_html: { class: "form-control"} %>
+      <%= e.submit "Submit", class:"btn btn-primary", data:{ disable_with: "Submitting…"} %>
+
+      </div>
+    </div>
+
+
+  <% end %>
+
 </div>
