--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -3,12 +3,12 @@
 
     <hr>
 
-    <%= simple_form_for @event do |e| %>
+    <%= simple_form_for @event,input_html: {remote: true, class: "form-control"}  do |e| %>
     <div class="form-group">
-      <%= e.input :start_time, input_html: { class: "form-control"} %>
-      <%= e.input :end_time, input_html: { class: "form-control"} %>
-      <%= e.input :summary, input_html: { class: "form-control"} %>
-      <%= e.input :slack, input_html: { class: "form-control"} %>
+      <%= e.input :start_time %>
+      <%= e.input :end_time %>
+      <%= e.input :summary%>
+      <%= e.input :all_slacks %>
 
       <%= e.submit "Submit", class:"btn btn-primary", data:{ disable_with: "Submitting…"} %>
 
