--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,11 @@
 <div class="col-md-12">
   <div class="event">
     <%= link_to("New event", new_event_path, class:"btn btn-primary pull-right") %>
+    <%= form_tag(events_path, method: :get, id: "search_form") do %>
+    <%= text_field_tag :slack, params[:slack] %>
+    <%= submit_tag "Search" %>
+    <% end %>
+
     </div>
     <table class="table table-hover">
     <thead>
