config time zone and implement ics export with tz support

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,7 +1,8 @@
-<%= div_for event do %>
-
-    <div class="tags">
-      <%=raw event.all_slacks %>
-    </div>
-
-<% end %>
+<% @events.each do |event| %>
+ <tr>
+<td><%= link_to(event.summary, event_path(event)) %></td>
+<td><%= event.start_time %></td>
+<td><%= event.end_time %></td>
+<td><%= link_to event.summary, controller:'events', action: :show, format: :ics, :id => event.id %>
+</td>
+ <% end %>
