--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,8 +1,8 @@
 <% @events.each do |event| %>
  <tr>
-<td><%= link_to(event.summary, event_path(event)) %></td>
-<td><%= event.start_time %></td>
-<td><%= event.end_time %></td>
+<td><%=  event.start_time %></td>
+<td><%= link_to event.all_slacks, edit_event_path(event)%>
 <td><%= link_to event.summary, controller:'events', action: :show, format: :ics, :id => event.id %>
 </td>
+</tr>
  <% end %>
