--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,20 +1,25 @@
 <div class="col-md-12">
-  <div class="event">
-    <%= link_to("New event", new_event_path, class:"btn btn-primary pull-right") %>
+    <%#= link_to("New event", new_event_path, class:"btn btn-primary pull-right") %>
+  <div id= "custom-search-input">
+
+    <%#= link_to("New event", new_event_path, class:"btn btn-primary pull-right") %>
     <%= form_tag(events_path, method: :get, id: "search_form") do %>
-    <%= text_field_tag :slack, params[:slack] %>
+    <%= text_field_tag :slack, params[:slack], placeholder:"Search your slack id and export your calendar", size:150 %>
     <%= submit_tag "Search" %>
     <% end %>
 
     </div>
+
+
+
     <table class="table table-hover">
     <thead>
       <tr>
 
-        <td>summary</td>
-        <td>start_time</td>
-        <td>end_time</td>
-        <td>Calender</td>
+        <td>Shift</td>
+        <td>TAs</td>
+
+        <td>Calendar Download Links</td>
       </tr>
     </thead>
     <tbody>
@@ -28,5 +33,5 @@
 
     </tbody>
     </table>
-
+   
 </div>
