--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="container" style="margin-top: 100px;">
     <p class="text-center">Copyright ©2016
-        <br>Design by Daniel
+        <br>Design by <a href="https://github.com/cndaniel">cnDaniel</a>
 
     </p>
 </footer>
