--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,37 +1,40 @@
 <div class="col-md-12">
 
-  <div id= "custom-search-input">
+  <div class="container">
+    <div class="search">
 
 
-    <%= form_tag(events_path, method: :get, id: "search_form") do %>
-    <%= text_field_tag :slack, params[:slack], placeholder:"Enter your slack id and export your calendar", size:150 %>
-    <%= submit_tag "Search" %>
+    <%= form_tag(events_path, method: :get) do %>
+    <%= text_field_tag :slack, params[:slack], class:"form-control input-lg",placeholder:"Enter your slack id and export your calendar", size:100 %>
+    <%= submit_tag "Search", class:"form-control btn btn-info" %>
+
     <% end %>
-
+  </div>
     </div>
+    <br>
     <% if current_user %>
       <%= link_to("Set up a new weekly shift", new_week_table_path, class:"btn btn-primary pull-right") %>
-     
-      <% end %>
 
-    <table class="table table-hover">
+      <% end %>
+      <br>
+      <br>
+    <table class="table table-bordered table-responsive table-hover">
     <thead>
       <tr>
 
         <td>Shift</td>
         <td>TAs</td>
-
         <td>Calendar Download Links</td>
       </tr>
     </thead>
     <tbody>
 
+
       <% if @events.present? %>
-     <%= render "event" %>
-     <% else %>
-      <p>Please enter your slack id</p>
-     <% end %>
-   </tr>
+      <%= render "event" %>
+      <% else %>
+       <p>Please enter your slack id</p>
+      <% end %>
 
     </tbody>
     </table>
