remove the edit buttion from Ta TO START TIME

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,7 +1,7 @@
 <% @events.each do |event| %>
  <tr>
-<td><%=  event.start_time %></td>
-<td><%= link_to event.all_slacks, edit_event_path(event)%>
+<td><%= link_to event.start_time, edit_event_path(event) %></td>
+<td><%=  event.all_slacks%>
 <td><%= link_to event.summary, controller:'events', action: :show, format: :ics, :id => event.id %>
 </td>
 </tr>
