--- a/app/views/week_tables/new.html.erb
+++ b/app/views/week_tables/new.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <th></th>
         <th>10-12AM</th>
-        <th>12AM-14PM</th>
+        <th>12pM-14PM</th>
         <th>2-4PM</th>
         <th>4-6PM</th>
         <th>6-8PM</th>
@@ -33,14 +33,14 @@
         <td>Sat</td>
         <td><%= t.simple_fields_for :events,input_html: {remote: true } do |e| %>
           <%= e.hidden_field :start_time, value: set_up_shift_time("This week Saturday at 10am")%>
-          <%= e.hidden_field :end_time, value:set_up_shift_time("This week Saturday at 12am") %>
-          <%= e.hidden_field :summary, value:"TA on Fullstack sat 10-12 am"%>
+          <%= e.hidden_field :end_time, value:set_up_shift_time("This week Saturday at 12pm") %>
+          <%= e.hidden_field :summary, value:"TA on Fullstack sat 10-12pm"%>
           <%= e.input :all_slacks,as: :text, input_html: {rows:5}, label: false, placeholder:"e.g: 'yungyuan, yi-hung,frank'"%>
         <% end %>
       </td>
 
       <td><%= t.simple_fields_for :events,input_html: {remote: true } do |e| %>
-        <%= e.hidden_field :start_time, value: set_up_shift_time("This week Saturday at 12am")%>
+        <%= e.hidden_field :start_time, value: set_up_shift_time("This week Saturday at 12pm")%>
         <%= e.hidden_field :end_time, value:set_up_shift_time("This week Saturday at 2pm") %>
         <%= e.hidden_field :summary, value:"TA on Fullstack sat 12-2 pm"%>
         <%= e.input :all_slacks,as: :text, input_html: {rows:5}, label: false, placeholder:"e.g: 'yungyuan, yi-hung,frank'"%>
@@ -89,14 +89,14 @@
 
         <td><%= t.simple_fields_for :events,input_html: {remote: true } do |e| %>
           <%= e.hidden_field :start_time, value: set_up_shift_time("This week Sunday at 10am")%>
-          <%= e.hidden_field :end_time, value:set_up_shift_time("This week Sunday at 12am") %>
+          <%= e.hidden_field :end_time, value:set_up_shift_time("This week Sunday at 12pm") %>
           <%= e.hidden_field :summary, value:"TA on Fullstack Sun 10am - 12am"%>
             <%= e.input :all_slacks,as: :text, input_html: {rows:5}, label: false, placeholder:"e.g: 'yungyuan, yi-hung,frank'"%>
         <% end %>
       </td>
 
       <td><%= t.simple_fields_for :events,input_html: {remote: true } do |e| %>
-        <%= e.hidden_field :start_time, value: set_up_shift_time("This week Sunday at 12am")%>
+        <%= e.hidden_field :start_time, value: set_up_shift_time("This week Sunday at 12pm")%>
         <%= e.hidden_field :end_time, value:set_up_shift_time("This week Sunday at 2pm") %>
         <%= e.hidden_field :summary, value:"TA on Fullstack Sun 12am - 2am"%>
           <%= e.input :all_slacks,as: :text, input_html: {rows:5}, label: false, placeholder:"e.g: 'yungyuan, yi-hung,frank'"%>
