--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,8 +11,13 @@
     <% end %>
   </div>
     </div>
-    <br>
+
+
+
+  <br>
+
     <% if current_user %>
+    <%= link_to "Download all your events this week", controller:'events', action: :ics_export, format: :ics,class:"btn btn-primary pull-left" %>
       <%= link_to("Set up a new weekly shift", new_week_table_path, class:"btn btn-primary pull-right") %>
 
       <% end %>
