--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -34,6 +34,7 @@
         <td>Shift</td>
         <td>TAs</td>
         <td>Calendar Download Links</td>
+        <td>delete</td>
       </tr>
     </thead>
     <tbody>
