--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -11,6 +11,7 @@
     <% end %>
   </div>
 <br>
+
   <% if current_user %>
   <div class="group">
     <%= link_to "Export  all the events", {controller:'events', action: :ics_export, format: :ics}, class: 'btn btn-primary pull-left' %>
@@ -28,7 +29,7 @@
 
     <% if current_user %>
 
-      <%= link_to("Set up a new weekly shift", new_week_table_path, class:"btn btn-primary pull-right") %>
+      <%= link_to("Set up a new weekly shift", new_week_table_path, class:"btn btn-danger pull-right") %>
 
       <% end %>
       <br>
