search bar cant be blank

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,7 +6,7 @@
 
     <%= form_tag(events_path, method: :get) do %>
 
-    <%= text_field_tag :slack, params[:slack], class:"form-control input-lg",placeholder:"Enter the slack id", size:80 %>
+    <%= text_field_tag :slack, params[:slack], required: true, class:"form-control input-lg",placeholder:"Enter the slack id", size:80 %>
     <br>
 
     <%= select_tag :format, options_for_select([["I want to export all my shifts of this week into my calendar", "ics"],["Just check my shifts on page", "html"]], "Export all your events of this week"), class:"form-control " %>
